--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.myorg</groupId>
     <artifactId>save-receipt-function</artifactId>
+    <packaging>pom</packaging>
     <version>0.1</version>
+    <modules>
+        <module>save-receipts-lambda</module>
+        <module>save-receipts-cdk</module>
+    </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <cdk.version>1.91.0</cdk.version>
@@ -26,34 +31,46 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>com.myorg.SaveReceiptFunctionApp</mainClass>
+                    <mainClass>com.coffeebeans.cdk.Application</mainClass>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
-        <!-- AWS Cloud Development Kit -->
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
             <artifactId>core</artifactId>
             <version>${cdk.version}</version>
         </dependency>
 
-        <!-- Respective AWS Construct Libraries -->
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
-            <artifactId>sns</artifactId>
+            <artifactId>apigateway</artifactId>
             <version>${cdk.version}</version>
         </dependency>
+
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
-            <artifactId>sns-subscriptions</artifactId>
+            <artifactId>dynamodb</artifactId>
             <version>${cdk.version}</version>
         </dependency>
+
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
-            <artifactId>sqs</artifactId>
+            <artifactId>lambda</artifactId>
             <version>${cdk.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>${cdk.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava-collections</artifactId>
+            <version>r03</version>
         </dependency>
 
         <dependency>
@@ -62,17 +79,47 @@
           <version>${junit.version}</version>
           <scope>test</scope>
         </dependency>
+
         <dependency>
           <groupId>org.junit.jupiter</groupId>
           <artifactId>junit-jupiter-engine</artifactId>
           <version>${junit.version}</version>
           <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.18.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.415</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-core</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>3.6.0</version>
         </dependency>
     </dependencies>
 </project>
