--- a/save-receipts-cdk/pom.xml
+++ b/save-receipts-cdk/pom.xml
@@ -3,9 +3,9 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <groupId>com.coffeebeans</groupId>
     <artifactId>save-receipt-function</artifactId>
-    <groupId>com.myorg</groupId>
-    <version>0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -31,8 +31,19 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.0.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
           <mainClass>com.coffeebeans.cdk.Application</mainClass>
+          <executable>java</executable>
+          <includeProjectDependencies>true</includeProjectDependencies>
+          <includePluginDependencies>true</includePluginDependencies>
+          <classpathScope>compile</classpathScope>
         </configuration>
       </plugin>
     </plugins>
@@ -97,7 +108,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>RELEASE</version>
+      <version>1.18.20</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
